tests/spec/fail/setutil_from_range_bad_type.aja
import (
    "modules/setutil"
)

print(setutil.fromRange("1", 5))
